TASK: English annotation

--- a/config/calibration.ini
+++ b/config/calibration.ini
@@ -12,7 +12,7 @@ transform_xyz_m = 0.0 0.0 0.5
 ; rotation_rpy_deg = -1.0 -1.5 -90.0
 ; rotation_rpy_deg = -0.7 -1.5 -90.0
 rotation_rpy_deg = -0.7 -1.5 -89.0
-; Novatel IMU HMG Ioniq Pwrpak; yaw 제외 하면 roll -1.5 pitch 1.0
+; Novatel IMU HMG Ioniq Pwrpak; except yaw, roll -1.5 pitch 1.0
 
 [CG To Imu]
 parent_frame_id = ego_frame
