--- a/config/localization.ini
+++ b/config/localization.ini
@@ -8,9 +8,9 @@ projector = local_cartesian
 
 [common_variable]
 lidar_type = velodyne
-; ouster 또는 기본 pcl 포맷
-lidar_scan_time_end = 1 ; 1: Lidar 시간이 마지막 포인트가 시간 0.0 인 경우. Ioniq VLP32 는 1
-lidar_time_delay = 0.03 ; 라이다 출력 지연 (초 단위)
+; ouster or default pcl format
+lidar_scan_time_end = 1 ; 1: Lidar time is when the last point is time 0.0. Ioniq VLP32 is 1
+lidar_time_delay = 0.03 ; Lidar output delay (in seconds)
 lidar_topic_name = /velodyne_points
 ; /center/rslidar_points /velodyne_points /ouster/points
 can_topic_name = /kusv_CanInfo_geo_msg
@@ -28,17 +28,17 @@ imu_gravity = 9.81 ; Earth Gravity for imu sensor
 imu_estimate_gravity = 1 ; 0: Do not estimate gravity, 1: Estimate gravity
 imu_estimate_calibration = 1 ; 1: estimate vehicle to imu RPY
 use_zupt = 1 ; Zero Velocity Potential Update
-use_complementary_filter = 0 ; Complementary Filter (BESTPOS 모드에선 강제 사용)
+use_complementary_filter = 0 ; Complementary Filter (Forced use in BESTPOS mode)
 
 gps_type = 1 ; 0: INSPVAX, 1: BESTPOS and BESTVEL, 2: NavSatFix
-gnss_uncertainy_max_m = 1.0 ; gnss 입력 최대 cov 제한
+gnss_uncertainy_max_m = 1.0 ; Maximum cov limit for gnss input
 
-use_gps = 1 ; 1: use gps for Update, 0: Only use GPS for pose initialization
+use_gps = 0 ; 1: use gps for Update, 0: Only use GPS for pose initialization
 use_imu = 1 ; 1: use imu for prediction. 0: use system state for prediction
-use_can = 1 ; 1: use can for velocity update
-use_pcm_matching = 0 ; PCM matching 사용 여부
+use_can = 0 ; 1: use can for velocity update
+use_pcm_matching = 1 ; Use PCM matching
 
-can_vel_scale_factor = 1.0 ; tunning param
+can_vel_scale_factor = 1.0 ; tuning param
 
 ; EKF Initial pose
 ekf_init_x_m = 0.0
@@ -49,18 +49,18 @@ ekf_init_pitch_deg = 0.0
 ekf_init_yaw_deg = 0.0
 
 ; EKF State uncertainty
-ekf_state_uncertainty_pos_m = 0.02 ; state 위치 불확실성
-ekf_state_uncertainty_rot_deg = 0.2 ; state 회전 불확실성
-ekf_state_uncertainty_vel_mps = 2.0 ; state 속도 불확실성
+ekf_state_uncertainty_pos_m = 0.02 ; state position uncertainty
+ekf_state_uncertainty_rot_deg = 0.2 ; state rotation uncertainty
+ekf_state_uncertainty_vel_mps = 2.0 ; state velocity uncertainty
 ekf_state_uncertainty_gyro_dps = 5.0 ; only use non imu mode
 ekf_state_uncertainty_acc_mps = 100.0 ; only use non imu mode
 
 ; IMU Sensor uncertainty
-ekf_imu_uncertainty_gyro_dps = 0.01 ; imu 자이로 불확실성
-ekf_imu_uncertainty_acc_mps = 0.001 ; imu 가속도 불확실성
+ekf_imu_uncertainty_gyro_dps = 0.01 ; imu gyro uncertainty
+ekf_imu_uncertainty_acc_mps = 0.001 ; imu acceleration uncertainty
 
-ekf_imu_bias_cov_gyro = 0.0001 ; imu 자이로 바이어스 불확실성 (Don't touch)
-ekf_imu_bias_cov_acc = 0.0001 ; imu 가속도 바이어스 불확실성 (Don't touch)
+ekf_imu_bias_cov_gyro = 0.0001 ; imu gyro bias uncertainty (Don't touch)
+ekf_imu_bias_cov_acc = 0.0001 ; imu acceleration bias uncertainty (Don't touch)
 
 ; absolute minimum cov of gnss position. Only for GPS
 ekf_gnss_min_cov_x_m = 0.2
@@ -70,39 +70,38 @@ ekf_gnss_min_cov_roll_deg = 0.0
 ekf_gnss_min_cov_pitch_deg = 0.0
 ekf_gnss_min_cov_yaw_deg = 0.0
 
-ekf_can_meas_uncertainty_vel_mps = 2.0 ; CAN 속도 불확실성
-ekf_can_meas_uncertainty_yaw_rate_deg = 10.0 ; CAN 각속도 불확실성
+ekf_can_meas_uncertainty_vel_mps = 2.0 ; CAN velocity uncertainty
+ekf_can_meas_uncertainty_yaw_rate_deg = 10.0 ; CAN yaw rate uncertainty
 
-ekf_bestvel_meas_uncertainty_vel_mps = 1.0 ; BESTVEL 속도 불확실성
+ekf_bestvel_meas_uncertainty_vel_mps = 1.0 ; BESTVEL velocity uncertainty
 
 [pcm_matching]
 debug_print = 0 ; Print debug msg
 
-pcm_voxel_size = 2.0 ; Voxel 크기
-pcm_voxel_max_point = 30 ; Voxel 내 최대 포인트 수
+pcm_voxel_size = 2.0 ; Voxel size
+pcm_voxel_max_point = 30 ; Maximum number of points in a voxel
 
 run_deskew = 1 ; 1: true 0: false
-input_max_dist = 100 ; 입력 포인트 클라우드 거리 필터링
-input_index_sampling = 5 ; pointcloud의 인덱스로 샘플링
-input_voxel_ds_m = 3.0 ; voxel당 하나만 남기는 샘플링
-
+input_max_dist = 100 ; Input point cloud distance filtering
+input_index_sampling = 5 ; Sampling by index of pointcloud
+input_voxel_ds_m = 1.5 ; Sampling leaving only one per voxel
 
 icp_method = 1 ; 0:P2P, 1:GICP, 2:VGICP, 3:AVGICP
 voxel_search_method = 2 ; 0: 1voxel, 1: 7voxel, 2: 27voxel ; TODO:
-gicp_cov_search_dist = 0.7 ; GICP 에서 target 포인트 주변 cov 계산시 탐색 범위
+gicp_cov_search_dist = 0.7 ; Search range for cov calculation around target point in GICP
 
-max_thread = 8 ; cpu 최대 thread 사용 수. 0이하로 설정시 최대 사용
-max_iteration = 10 ; icp 최대 반복수
-max_search_dist = 5.0 ; corresponding 최대 탐색 거리
-lm_lambda = 0.5 ; Levenburg 람다 값 
-icp_termination_threshold_m = 0.02 ; icp 종료 translation+angle 임계값
+max_thread = 8 ; Maximum number of CPU threads to use. Set to 0 or less for maximum use
+max_iteration = 10 ; Maximum number of icp iterations
+max_search_dist = 5.0 ; Maximum search distance for corresponding
+lm_lambda = 0.5 ; Levenburg lambda value 
+icp_termination_threshold_m = 0.02 ; icp termination translation+angle threshold
 
-min_overlap_ratio = 0.4 ; map 과 연관된 포인트 최소 비율
-max_fitness_score = 0.5 ; icp 성공으로 볼 최대 fitness score
+min_overlap_ratio = 0.4 ; Minimum ratio of points related to the map
+max_fitness_score = 0.5 ; Maximum fitness score considered as icp success
 
 ; Params for radar
-use_radar_cov = 0 ; 1: radar cov 사용, 0: radar cov 사용 안함
-doppler_trans_lambda = 0.5 ; 0.0 geometric, 1.0 doppler (use_doppler 1 일때만 적용됨)
+use_radar_cov = 0 ; 1: use radar cov, 0: do not use radar cov
+doppler_trans_lambda = 0.5 ; 0.0 geometric, 1.0 doppler (applies only when use_doppler is 1)
 range_variance_m = 1.0 ; for radar
 azimuth_variance_deg = 0.4 ; for radar 
 elevation_variance_deg = 0.4 ; for radar
