Remove CG Calibration

--- a/config/localization.ini
+++ b/config/localization.ini
@@ -1,11 +1,4 @@
 ; - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-;[StateEstimation]
-[StateEstimation]
-
-[StateUsingNovatel]
-projector = local_cartesian     
-
-
 [common_variable]
 lidar_type = velodyne
 ; ouster or default pcl format
@@ -14,8 +7,8 @@ lidar_time_delay = 0.03 ; Lidar output delay (in seconds)
 lidar_topic_name = /velodyne_points
 ; /center/rslidar_points /velodyne_points /ouster/points
 can_topic_name = /kusv_CanInfo_geo_msg
-imu_topic_name = /imu/data_raw
-; /ouster/imu /imu/data_raw /gps/imu
+imu_topic_name = /imu/data
+; /ouster/imu /imu/data_raw /gps/imu /imu/data
 navsatfix_topic_name = /gps/fix
 
 projection_mode = Cartesian ; Cartesian, UTM
@@ -25,10 +18,10 @@ debug_print = 0 ; Print debug msg
 debug_imu_print = 0 ; Print Imu debug msg
 
 imu_gravity = 9.81 ; Earth Gravity for imu sensor
-imu_estimate_gravity = 0 ; 0: Do not estimate gravity, 1: Estimate gravity
+imu_estimate_gravity = 1 ; 0: Do not estimate gravity, 1: Estimate gravity
 imu_estimate_calibration = 0 ; 1: estimate vehicle to imu RPY
-use_zupt = 1 ; Zero Velocity Potential Update
-use_complementary_filter = 0 ; Complementary Filter (Forced use in BESTPOS mode)
+use_zupt = 0 ; Zero Velocity Potential Update
+use_complementary_filter = 1 ; Complementary Filter (Forced use in BESTPOS mode)
 
 gps_type = 2 ; 0: INSPVAX, 1: BESTPOS and BESTVEL, 2: NavSatFix
 gnss_uncertainy_max_m = 1.0 ; Maximum cov limit for gnss input
@@ -41,12 +34,12 @@ use_pcm_matching = 1 ; Use PCM matching
 can_vel_scale_factor = 1.0 ; tuning param
 
 ; EKF Initial pose
-ekf_init_x_m = 0.0
-ekf_init_y_m = 0.0
-ekf_init_z_m = 0.0
+ekf_init_x_m = 3.11
+ekf_init_y_m = 2.60
+ekf_init_z_m = -0.4
 ekf_init_roll_deg = 0.0
 ekf_init_pitch_deg = 0.0
-ekf_init_yaw_deg = 0.0
+ekf_init_yaw_deg = 150.13
 
 ; EKF State uncertainty
 ekf_state_uncertainty_pos_m = 0.02 ; state position uncertainty
@@ -78,7 +71,7 @@ ekf_bestvel_meas_uncertainty_vel_mps = 1.0 ; BESTVEL velocity uncertainty
 [pcm_matching]
 debug_print = 0 ; Print debug msg
 
-pcm_voxel_size = 2.0 ; Voxel size
+pcm_voxel_size = 1.0 ; Voxel size
 pcm_voxel_max_point = 30 ; Maximum number of points in a voxel
 
 run_deskew = 1 ; 1: true 0: false
@@ -88,7 +81,7 @@ input_voxel_ds_m = 1.5 ; Sampling leaving only one per voxel
 
 icp_method = 1 ; 0:P2P, 1:GICP, 2:VGICP, 3:AVGICP
 voxel_search_method = 2 ; 0: 1voxel, 1: 7voxel, 2: 27voxel ; TODO:
-gicp_cov_search_dist = 0.7 ; Search range for cov calculation around target point in GICP
+gicp_cov_search_dist = 0.4 ; Search range for cov calculation around target point in GICP
 
 max_thread = 10 ; Maximum number of CPU threads to use. Set to 0 or less for maximum use
 max_iteration = 10 ; Maximum number of icp iterations
