Add GEODE Dataset config

--- a/config/localization.ini
+++ b/config/localization.ini
@@ -34,12 +34,21 @@ use_pcm_matching = 1 ; Use PCM matching
 can_vel_scale_factor = 1.0 ; tuning param
 
 ; EKF Initial pose
-ekf_init_x_m = 3.11
-ekf_init_y_m = 2.60
-ekf_init_z_m = -0.4
-ekf_init_roll_deg = 0.0
-ekf_init_pitch_deg = 0.0
-ekf_init_yaw_deg = 150.13
+; Hanyang University
+; ekf_init_x_m = 3.11
+; ekf_init_y_m = 2.60
+; ekf_init_z_m = -0.4
+; ekf_init_roll_deg = 0.0
+; ekf_init_pitch_deg = 0.0
+; ekf_init_yaw_deg = 150.13
+
+; GEODE Dataset stairs alpha
+ekf_init_x_m = -11.2379716113593
+ekf_init_y_m = 2.61441970033043
+ekf_init_z_m = -0.576108843465071
+ekf_init_roll_deg = -0.1147311
+ekf_init_pitch_deg = -0.4350557
+ekf_init_yaw_deg = -129.8725387
 
 ; EKF State uncertainty
 ekf_state_uncertainty_pos_m = 0.02 ; state position uncertainty
