--- a/config/localization.ini
+++ b/config/localization.ini
@@ -3,7 +3,7 @@
 lidar_type = velodyne
 ; ouster or default pcl format
 lidar_scan_time_end = 1 ; 1: Lidar time is when the last point is time 0.0. Ioniq VLP32 is 1
-lidar_time_delay = 0.03 ; Lidar output delay (in seconds)
+lidar_time_delay = 0.0 ; Lidar output delay (in seconds)
 lidar_topic_name = /velodyne_points
 ; /center/rslidar_points /velodyne_points /ouster/points
 can_topic_name = /kusv_CanInfo_geo_msg
@@ -18,10 +18,11 @@ debug_print = 0 ; Print debug msg
 debug_imu_print = 0 ; Print Imu debug msg
 
 imu_gravity = 9.81 ; Earth Gravity for imu sensor
-imu_estimate_gravity = 1 ; 0: Do not estimate gravity, 1: Estimate gravity
+imu_estimate_bias = 0 ; 0: Do not estimate bias, 1: Estimate bias
+imu_estimate_gravity = 0 ; 0: Do not estimate gravity, 1: Estimate gravity
 imu_estimate_calibration = 0 ; 1: estimate vehicle to imu RPY
 use_zupt = 0 ; Zero Velocity Potential Update
-use_complementary_filter = 1 ; Complementary Filter (Forced use in BESTPOS mode)
+use_complementary_filter = 0 ; Complementary Filter (Forced use in BESTPOS mode)
 
 gps_type = 2 ; 0: INSPVAX, 1: BESTPOS and BESTVEL, 2: NavSatFix
 gnss_uncertainy_max_m = 1.0 ; Maximum cov limit for gnss input
@@ -48,21 +49,22 @@ ekf_init_y_m = 2.61441970033043
 ekf_init_z_m = -0.576108843465071
 ekf_init_roll_deg = -0.1147311
 ekf_init_pitch_deg = -0.4350557
+; ekf_init_pitch_deg = 0.4350557
 ekf_init_yaw_deg = -129.8725387
 
 ; EKF State uncertainty
-ekf_state_uncertainty_pos_m = 0.02 ; state position uncertainty
-ekf_state_uncertainty_rot_deg = 0.2 ; state rotation uncertainty
+ekf_state_uncertainty_pos_m = 0.1 ; state position uncertainty
+ekf_state_uncertainty_rot_deg = 0.5 ; state rotation uncertainty
 ekf_state_uncertainty_vel_mps = 2.0 ; state velocity uncertainty
 ekf_state_uncertainty_gyro_dps = 5.0 ; only use non imu mode
 ekf_state_uncertainty_acc_mps = 100.0 ; only use non imu mode
 
 ; IMU Sensor uncertainty
-ekf_imu_uncertainty_gyro_dps = 0.01 ; imu gyro uncertainty
+ekf_imu_uncertainty_gyro_rads = 0.001 ; imu gyro uncertainty
 ekf_imu_uncertainty_acc_mps = 0.001 ; imu acceleration uncertainty
 
-ekf_imu_bias_cov_gyro = 0.0001 ; imu gyro bias uncertainty (Don't touch)
-ekf_imu_bias_cov_acc = 0.0001 ; imu acceleration bias uncertainty (Don't touch)
+ekf_imu_bias_cov_gyro = 0.002 ; imu gyro bias uncertainty (Don't touch)
+ekf_imu_bias_cov_acc = 0.02 ; imu acceleration bias uncertainty (Don't touch)
 
 ; absolute minimum cov of gnss position. Only for GPS
 ekf_gnss_min_cov_x_m = 0.2
@@ -80,26 +82,31 @@ ekf_bestvel_meas_uncertainty_vel_mps = 1.0 ; BESTVEL velocity uncertainty
 [pcm_matching]
 debug_print = 0 ; Print debug msg
 
-pcm_voxel_size = 1.0 ; Voxel size
+pcm_voxel_size = 0.5 ; Voxel size. Indoor: 1.0, Outdoor: 2.0
 pcm_voxel_max_point = 30 ; Maximum number of points in a voxel
 
 run_deskew = 1 ; 1: true 0: false
 input_max_dist = 100 ; Input point cloud distance filtering
-input_index_sampling = 5 ; Sampling by index of pointcloud
-input_voxel_ds_m = 1.5 ; Sampling leaving only one per voxel
+input_index_sampling = 3 ; Sampling by index of pointcloud
+input_voxel_ds_m = 0.3 ; Sampling leaving only one per voxel
+; Indoor: 0.2, Outdoor: 1.5
 
 icp_method = 1 ; 0:P2P, 1:GICP, 2:VGICP, 3:AVGICP
 voxel_search_method = 2 ; 0: 1voxel, 1: 7voxel, 2: 27voxel ; TODO:
-gicp_cov_search_dist = 0.4 ; Search range for cov calculation around target point in GICP
+gicp_cov_search_dist = 0.2 ; Search range for cov calculation around target point in GICP
+; Indoor: 0.4, Outdoor: 0.7
 
 max_thread = 10 ; Maximum number of CPU threads to use. Set to 0 or less for maximum use
 max_iteration = 10 ; Maximum number of icp iterations
-max_search_dist = 5.0 ; Maximum search distance for corresponding
+max_search_dist = 0.7 ; Maximum search distance for corresponding
+; Indoor: 1.0, Outdoor: 5.0
+
 lm_lambda = 0.5 ; Levenburg lambda value 
 icp_termination_threshold_m = 0.02 ; icp termination translation+angle threshold
 
 min_overlap_ratio = 0.4 ; Minimum ratio of points related to the map
-max_fitness_score = 0.5 ; Maximum fitness score considered as icp success
+max_fitness_score = 0.3 ; Maximum fitness score considered as icp success
+; Indoor: 0.3, Outdoor: 0.5
 
 ; Params for radar
 use_radar_cov = 0 ; 1: use radar cov, 0: do not use radar cov
